Math_26/evosuite/original/evosuite-report-clz/test_build.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Math_26_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/CI/Benchmark/libs/evosuite-shaded-1.2.1-SNAPSHOT.jar:target/classes/  /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Math_26_buggy/evosuite-tests/org/apache/commons/math3/fraction/Fraction_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Math_26_buggy/evosuite-tests/org/apache/commons/math3/fraction/Fraction_ESTest.java >> evosuite-report-clz/test_build.log 2>&1

/home/liumengjiao/Desktop/CI/Benchmark/../bugs/Math_26_buggy/evosuite-tests/org/apache/commons/math3/fraction/Fraction_ESTest.java:10: error: cannot find symbol
import org.apache.commons.math3.fraction.Fraction;
                                        ^
  symbol:   class Fraction
  location: package org.apache.commons.math3.fraction
/home/liumengjiao/Desktop/CI/Benchmark/../bugs/Math_26_buggy/evosuite-tests/org/apache/commons/math3/fraction/Fraction_ESTest.java:20: error: cannot find symbol
      Fraction fraction0 = new Fraction((-661), 4);
      ^
  symbol:   class Fraction
  location: class Fraction_ESTest
/home/liumengjiao/Desktop/CI/Benchmark/../bugs/Math_26_buggy/evosuite-tests/org/apache/commons/math3/fraction/Fraction_ESTest.java:20: error: cannot find symbol
      Fraction fraction0 = new Fraction((-661), 4);
                               ^
  symbol:   class Fraction
  location: class Fraction_ESTest
/home/liumengjiao/Desktop/CI/Benchmark/../bugs/Math_26_buggy/evosuite-tests/org/apache/commons/math3/fraction/Fraction_ESTest.java:27: error: cannot find symbol
      Fraction fraction0 = new Fraction(4);
      ^
  symbol:   class Fraction
  location: class Fraction_ESTest
/home/liumengjiao/Desktop/CI/Benchmark/../bugs/Math_26_buggy/evosuite-tests/org/apache/commons/math3/fraction/Fraction_ESTest.java:27: error: cannot find symbol
      Fraction fraction0 = new Fraction(4);
                               ^
  symbol:   class Fraction
  location: class Fraction_ESTest
/home/liumengjiao/Desktop/CI/Benchmark/../bugs/Math_26_buggy/evosuite-tests/org/apache/commons/math3/fraction/Fraction_ESTest.java:34: error: cannot find symbol
      Fraction fraction0 = new Fraction(0.9689123630523682, 869);
      ^
  symbol:   class Fraction
  location: class Fraction_ESTest
/home/liumengjiao/Desktop/CI/Benchmark/../bugs/Math_26_buggy/evosuite-tests/org/apache/commons/math3/fraction/Fraction_ESTest.java:34: error: cannot find symbol
      Fraction fraction0 = new Fraction(0.9689123630523682, 869);
                               ^
  symbol:   class Fraction
  location: class Fraction_ESTest
/home/liumengjiao/Desktop/CI/Benchmark/../bugs/Math_26_buggy/evosuite-tests/org/apache/commons/math3/fraction/Fraction_ESTest.java:40: error: cannot find symbol
      Fraction fraction0 = new Fraction((-41.72799), 0.0, 61);
      ^
  symbol:   class Fraction
  location: class Fraction_ESTest
/home/liumengjiao/Desktop/CI/Benchmark/../bugs/Math_26_buggy/evosuite-tests/org/apache/commons/math3/fraction/Fraction_ESTest.java:40: error: cannot find symbol
      Fraction fraction0 = new Fraction((-41.72799), 0.0, 61);
                               ^
  symbol:   class Fraction
  location: class Fraction_ESTest
/home/liumengjiao/Desktop/CI/Benchmark/../bugs/Math_26_buggy/evosuite-tests/org/apache/commons/math3/fraction/Fraction_ESTest.java:46: error: cannot find symbol
      Fraction fraction0 = new Fraction(0.0);
      ^
  symbol:   class Fraction
  location: class Fraction_ESTest
/home/liumengjiao/Desktop/CI/Benchmark/../bugs/Math_26_buggy/evosuite-tests/org/apache/commons/math3/fraction/Fraction_ESTest.java:46: error: cannot find symbol
      Fraction fraction0 = new Fraction(0.0);
                               ^
  symbol:   class Fraction
  location: class Fraction_ESTest
11 errors
